k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: chyiyaqing/order:v0.0.2
          volumeMounts:
            - name: sqlite-data
              mountPath: /data
      volumes:
        - name: sqlite-data
          persistentVolumeClaim:
            claimName: sqlite-order-pvc
